--- a/cfg/csvToMydb.conf
+++ b/cfg/csvToMydb.conf
@@ -12,8 +12,8 @@ FIELDSEP = ,
 
 [DATABASE]
 DBTYPE = mysql
-DBSERVER = 221.123.166.214
-DBNAME = sbilling_test
+DBSERVER = 
+DBNAME = 
 DBPORT = 3306
 LOGINFILE = /sbilling/work/vince/work/file2db/cfg/login
 
